Add a new plugin to convert the search.js to a search.json

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,6 +2,9 @@ packageExtensions:
   typedoc-gjsify-theme@*:
     dependencies:
       typedoc: "*"
+  typedoc-plugin-remote-search@*:
+    dependencies:
+      typedoc: "*"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
