--- a/packages/typedoc-gjsify-theme/tsconfig.json
+++ b/packages/typedoc-gjsify-theme/tsconfig.json
@@ -7,6 +7,7 @@
     "strict": true,
     "outDir": "dist",
     "skipLibCheck": true,
+    "inlineSourceMap": true,
 
     "jsx": "react",
     "jsxFactory": "JSX.createElement",
