--- a/packages/typedoc-plugin-remote-search/package.json
+++ b/packages/typedoc-plugin-remote-search/package.json
@@ -2,6 +2,9 @@
     "name": "typedoc-plugin-remote-search",
     "version": "0.0.1",
     "main": "dist/index.js",
+    "bin": {
+        "typedoc-server": "./dist/cli.js"
+    },
     "repository": "https://github.com/gjsify/doc",
     "author": "Pascal Garber <pascal@artandcode.studio>",
     "license": "ICS",
@@ -14,6 +17,8 @@
         "lunr"
     ],
     "devDependencies": {
+        "@types/koa": "^2",
+        "@types/koa__router": "^8.0.11",
         "typescript": "^4.5.5"
     },
     "peerDependencies": {
@@ -25,8 +30,16 @@
         "watch": "tsc --watch"
     },
     "dependencies": {
+        "@koa/router": "^10.1.1",
+        "@types/koa-compress": "^4.0.3",
+        "@types/koa-static": "^4.0.2",
         "@types/lunr": "^2.3.4",
         "@types/node": "^17.0.12",
-        "lunr": "^2.3.9"
+        "@types/yargs": "^17.0.8",
+        "koa": "^2.13.4",
+        "koa-compress": "^5.1.0",
+        "koa-static": "^5.0.0",
+        "lunr": "^2.3.9",
+        "yargs": "^17.3.1"
     }
 }
