Working typedoc-plugin-remote-search

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,5 +50,8 @@
   "editor.formatOnSave": true,
   "[json]": {
     "editor.defaultFormatter": "vscode.json-language-features"
+  },
+  "[html]": {
+    "editor.defaultFormatter": "vscode.html-language-features"
   }
 }
