--- a/packages/typedoc-theme/package.json
+++ b/packages/typedoc-theme/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "typedoc-gjsify-theme",
+    "name": "@gjsify/typedoc-theme",
     "version": "0.0.1",
     "main": "dist/index.js",
-    "repository": "https://github.com/gjsify/doc",
+    "repository": "https://github.com/gjsify/doc/tree/main/packages/typedoc-theme",
     "author": "Pascal Garber <pascal@artandcode.studio>",
-    "license": "ICS",
+    "license": "AGPL",
     "keywords": [
         "typedoc",
         "typedoc-theme"
