--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,13 +1,15 @@
 packageExtensions:
-  typedoc-gjsify-theme@*:
+  "@gjsify/typedoc-plugin-remote-search@*":
     dependencies:
       typedoc: "*"
-  typedoc-plugin-remote-search@*:
+  "@gjsify/typedoc-theme@*":
     dependencies:
       typedoc: "*"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
     spec: "@yarnpkg/plugin-typescript"
+  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
+    spec: "@yarnpkg/plugin-interactive-tools"
 
 yarnPath: .yarn/releases/yarn-3.1.1.cjs
