--- a/packages/typedoc-plugin-remote-search/package.json
+++ b/packages/typedoc-plugin-remote-search/package.json
@@ -1,24 +1,30 @@
 {
-    "name": "typedoc-plugin-remote-search",
+    "name": "@gjsify/typedoc-plugin-remote-search",
     "version": "0.0.1",
     "main": "dist/index.js",
     "bin": {
         "typedoc-server": "./dist/cli.js"
     },
-    "repository": "https://github.com/gjsify/doc",
+    "repository": "https://github.com/gjsify/doc/tree/main/packages/typedoc-plugin-remote-search",
     "author": "Pascal Garber <pascal@artandcode.studio>",
-    "license": "ICS",
+    "license": "AGPL",
     "keywords": [
         "typedoc",
         "typedoc-plugin",
         "search",
         "server",
+        "serve",
         "remote",
         "lunr"
+    ],
+    "files": [
+        "./dist",
+        "./assets"
     ],
     "devDependencies": {
         "@types/koa": "^2",
         "@types/koa__router": "^8.0.11",
+        "esbuild": "^0.14.16",
         "typescript": "^4.5.5"
     },
     "peerDependencies": {
@@ -26,8 +32,12 @@
         "typedoc": "^0.22.11"
     },
     "scripts": {
-        "build": "tsc",
-        "watch": "tsc --watch"
+        "build": "npm run build:client && npm run build:server",
+        "build:server": "tsc",
+        "build:client": "node esbuild.client.js",
+        "watch": "tsc --watch",
+        "plugin:help": "typedoc --plugin typedoc-plugin-remote-search --help",
+        "server:help": "typedoc-server --help"
     },
     "dependencies": {
         "@koa/router": "^10.1.1",
