--- a/packages/typedoc-theme/package.json
+++ b/packages/typedoc-theme/package.json
@@ -2,6 +2,7 @@
     "name": "@gjsify/typedoc-theme",
     "version": "0.0.1",
     "main": "dist/index.js",
+    "homepage": "https://github.com/gjsify/doc/tree/main/packages/typedoc-theme#readme",
     "repository": "https://github.com/gjsify/doc/tree/main/packages/typedoc-theme",
     "author": "Pascal Garber <pascal@artandcode.studio>",
     "license": "AGPL",
