--- a/packages/typedoc-plugin-remote-search/package.json
+++ b/packages/typedoc-plugin-remote-search/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@gjsify/typedoc-plugin-remote-search",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "main": "dist/index.js",
     "bin": {
         "typedoc-server": "./dist/server/cli.js"
@@ -25,6 +25,7 @@
         "./assets"
     ],
     "devDependencies": {
+        "@types/jsonpack": "^1.1.1",
         "@types/koa": "^2",
         "@types/koa__router": "^8.0.11",
         "esbuild": "^0.14.16",
@@ -53,10 +54,12 @@
         "@types/lunr": "^2.3.4",
         "@types/node": "^17.0.12",
         "@types/yargs": "^17.0.8",
+        "jsonpack": "^1.1.5",
         "koa": "^2.13.4",
         "koa-compress": "^5.1.0",
         "koa-static": "^5.0.0",
         "lunr": "^2.3.9",
+        "lzma": "^2.3.2",
         "yargs": "^17.3.1"
     }
 }
