--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,27 +11,32 @@
     "Cogl",
     "Colorhug",
     "Dbusmenu",
+    "esbuild",
     "Farstream",
-    "GSSDP",
-    "GXPS",
     "Garber",
     "Gdaui",
     "Gegl",
-    "Gitg",
-    "Gtef",
-    "PDLNA",
-    "Pango",
-    "Rygel",
-    "Shumate",
-    "Tepl",
     "girs",
+    "Gitg",
     "gjsify",
     "gobject",
+    "GSSDP",
+    "Gtef",
+    "GXPS",
+    "jsonpack",
+    "lzma",
+    "Pango",
+    "PDLNA",
     "pnpify",
+    "Rygel",
+    "Shumate",
     "submodule",
     "submodules",
+    "Tepl",
     "tsdoc",
     "typedoc",
+    "typedocplugin",
+    "unshrink",
     "vala",
     "yarnpkg"
   ],
