--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,6 +5,13 @@ packageExtensions:
   "@gjsify/typedoc-theme@*":
     dependencies:
       typedoc: "*"
+  "chalk@5.0.0":
+    dependencies:
+      "#ansi-styles": "npm:ansi-styles@*"
+      "#supports-color": "npm:supports-color@*"
+  "ts-for-gir@*":
+    dependencies:
+      "ts-node": "*"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
