--- a/packages/typedoc-plugin-remote-search/package.json
+++ b/packages/typedoc-plugin-remote-search/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@gjsify/typedoc-plugin-remote-search",
-    "version": "0.0.5",
+    "version": "0.1.0",
     "main": "dist/index.js",
     "bin": {
         "typedoc-server": "./dist/server/cli.js"
@@ -28,7 +28,9 @@
         "@types/jsonpack": "^1.1.1",
         "@types/koa": "^2",
         "@types/koa__router": "^8.0.11",
+        "@types/lzma-native": "^4.0.1",
         "esbuild": "^0.14.16",
+        "ts-node": "^10.4.0",
         "typedoc": "^0.22.11",
         "typescript": "^4.5.5"
     },
@@ -42,9 +44,10 @@
         "build:client:dev": "node esbuild.client.dev.js",
         "build:client:prod": "node esbuild.client.prod.js",
         "plugin:help": "typedoc --plugin @gjsify/typedoc-plugin-remote-search --help",
-        "server:help": "typedoc-server --help",
+        "start": "node --max_old_space_size=20480 -r ts-node/register ./src/server/cli.ts",
+        "_start": "typedoc-server",
         "build:example": "typedoc src/index.ts src/types/index.ts src/plugin/plugin.tsx src/server/search-server.ts src/client/main.ts --out ./docs --plugin @gjsify/typedoc-plugin-remote-search",
-        "serve:example": "typedoc-server --doc-dir ./docs --limit 0",
+        "serve:example": "npm run start -- serve ./docs --limit 20",
         "example": "npm run build:example && npm run serve:example"
     },
     "dependencies": {
@@ -59,7 +62,7 @@
         "koa-compress": "^5.1.0",
         "koa-static": "^5.0.0",
         "lunr": "^2.3.9",
-        "lzma": "^2.3.2",
+        "lzma-native": "^8.0.6",
         "yargs": "^17.3.1"
     }
 }
