typedoch-theme: Start custom navbar and replaced some styles with bootstrap

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
     "GXPS",
     "jsonpack",
     "lzma",
+    "navbars",
     "Pango",
     "PDLNA",
     "pnpify",
@@ -58,5 +59,11 @@
   },
   "[html]": {
     "editor.defaultFormatter": "vscode.html-language-features"
+  },
+  "[scss]": {
+    "editor.defaultFormatter": "sibiraj-s.vscode-scss-formatter"
+  },
+  "[xml]": {
+    "editor.defaultFormatter": "redhat.vscode-xml"
   }
 }
