--- a/packages/typedoc-theme-client/package.json
+++ b/packages/typedoc-theme-client/package.json
@@ -7,8 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --progress --color --env production",
     "build:dev": "webpack --progress --color --env development",
+    "build:try": "yarn run build:dev --config ./webpack.try.js",
     "watch": "webpack --color --watch --env development",
     "watch:prod": "webpack --color --watch --env production",
+    "watch:try": "yarn run watch --config ./webpack.try.js",
     "lint": "eslint . --ext .ts,.tsx --fix && npm run lint:csr",
     "lint:csr": "tsc -p tsconfig.json --noEmit"
   },
