--- a/packages/typedoc-theme/package.json
+++ b/packages/typedoc-theme/package.json
@@ -23,6 +23,9 @@
         "watch": "tsc --watch"
     },
     "dependencies": {
+        "@ribajs/bs5": "workspace:^",
+        "@ribajs/jsx": "workspace:^",
+        "@ribajs/router": "workspace:^",
         "@types/node": "^17.0.18"
     }
 }
