typedoc-theme: white/black border on dark/light theme for navbar/sidebar

--- a/packages/typedoc-theme-client/package.json
+++ b/packages/typedoc-theme-client/package.json
@@ -78,7 +78,7 @@
     "@ribajs/iconset": "workspace:*",
     "@ribajs/router": "workspace:*",
     "@ribajs/types": "workspace:*",
-    "@ribajs/utils": "workspace:*",
+    "@ribajs/utils": "workspace:^",
     "bootstrap": "^5.1.3"
   }
 }
