Upgrade dependencies and cleanups

--- a/packages/typedoc-theme-client/package.json
+++ b/packages/typedoc-theme-client/package.json
@@ -2,15 +2,17 @@
   "name": "@gjsify/typedoc-theme-client",
   "version": "0.0.1",
   "description": "",
-  "main": "scripts/index.ts",
+  "main": "package.json",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --progress --color --env production",
     "build:dev": "webpack --progress --color --env development",
-    "build:try": "yarn run build:dev --config ./webpack.try.js",
+    "build:try": "yarn run build:dev --config ./webpack.try.js --env development",
+    "build:typedoc": "yarn run build:dev --config ./webpack.typedoc.js --env development",
     "watch": "webpack --color --watch --env development",
     "watch:prod": "webpack --color --watch --env production",
     "watch:try": "yarn run watch --config ./webpack.try.js",
+    "watch:typedoc": "yarn run watch --config ./webpack.typedoc.js",
     "lint": "eslint . --ext .ts,.tsx --fix && npm run lint:csr",
     "lint:csr": "tsc -p tsconfig.json --noEmit"
   },
@@ -19,8 +21,8 @@
   "author": "Pascal Garber <pascal@artandcode.studio>",
   "license": "AGPL",
   "devDependencies": {
-    "@babel/cli": "^7.17.3",
-    "@babel/core": "^7.17.4",
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.5",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-export-default-from": "^7.16.7",
     "@babel/plugin-proposal-object-rest-spread": "^7.17.3",
@@ -43,29 +45,29 @@
     "@types/debug": "^4.1.7",
     "@types/ical": "^0.8.0",
     "@types/marked": "^2.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/experimental-utils": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "@typescript-eslint/typescript-estree": "^5.12.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/experimental-utils": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "@typescript-eslint/typescript-estree": "^5.12.1",
     "babel-loader": "^8.2.3",
     "babel-plugin-array-includes": "^2.0.3",
     "css-loader": "^6.6.0",
     "eslint": "^8.9.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-prettier": "^4.0.0",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^7.2.1",
     "html-loader": "^3.1.0",
     "postcss": "^8.4.6",
-    "postcss-preset-env": "^7.4.0",
+    "postcss-preset-env": "^7.4.1",
     "prettier": "2.5.1",
     "pug": "^3.0.2",
     "pug-loader": "^2.4.0",
-    "sass": "^1.49.7",
+    "sass": "^1.49.8",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.1",
     "typescript": "^4.5.5",
-    "webpack": "^5.69.0",
+    "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
     "webpack-node-externals": "^3.0.0"
   },
