--- a/package.json
+++ b/package.json
@@ -56,11 +56,11 @@
   "license": "AGPL",
   "devDependencies": {
     "@ribajs/eslint-config": "next",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/experimental-utils": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/experimental-utils": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
     "eslint": "^8.9.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "2.5.1",
     "typescript": "^4.5.5"
@@ -113,6 +113,6 @@
   "dependencies": {
     "@gjsify/typedoc-custom-cli": "workspace:^",
     "@gjsify/typedoc-plugin-remote-search": "workspace:^",
-    "@yarnpkg/esbuild-plugin-pnp": "^2.0.1-rc.4"
+    "@yarnpkg/esbuild-plugin-pnp": "^2.0.1"
   }
 }
