NPM scripts: Build all packages

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "start:try": "yarn run build:docs:try && yarn run serve:try",
     "update": "yarn run update:submodules",
     "update:submodules": "git submodule update --init --recursive && git submodule foreach git pull origin master",
-    "build:types:node-gtk": "yarn run clear:types:node-gtk && ts-for-gir generate '*' -e node --useNamespace --moduleType commonjs --ignoreConflicts",
-    "build:types:gjs": "yarn run clear:types:gjs && ts-for-gir generate '*' -e gjs --useNamespace --moduleType esm --ignoreConflicts",
+    "build:types:node-gtk": "yarn run clear:types:node-gtk && ts-for-gjs generate '*' -e node --useNamespace --moduleType commonjs --ignoreConflicts",
+    "build:types:gjs": "yarn run clear:types:gjs && ts-for-gjs generate '*' -e gjs --useNamespace --moduleType esm --ignoreConflicts",
     "build:types": "yarn run build:types:gjs && yarn run build:types:node-gtk",
     "build:docs:node-gtk": "yarn run clear:docs:node-gtk && yarn run typedoc --options ./packages/typedoc-custom-cli/typedoc.node.js --in ./@types/node-gtk",
     "build:docs:gjs": "yarn run clear:docs:gjs && yarn run typedoc --options ./packages/typedoc-custom-cli/typedoc.gjs.js --in ./@types/Gjs",
@@ -20,7 +20,9 @@
     "build:docs": "yarn run build:docs:gjs && yarn run build:docs:node-gtk",
     "build:node-gtk": "yarn run build:types:node-gtk && yarn run build:docs:node-gtk",
     "build:gjs": "yarn run build:types:gjs && yarn run build:docs:gjs",
-    "build": "yarn run build:gjs && yarn run build:node-gtk",
+    "build:packages:ts-for-gjs": "cd vendor/ts-for-gjs && NODE_OPTIONS=\"\" npm install && NODE_OPTIONS=\"\" npm run build && NODE_OPTIONS=\"\" npm link",
+    "build:packages": "yarn run build:packages:ts-for-gjs && yarn workspace @gjsify/typedoc-custom-cli run build && yarn workspace @gjsify/typedoc-plugin-remote-search run build && yarn workspace @gjsify/typedoc-theme run build && yarn workspace @gjsify/typedoc-theme-client run build",
+    "build": "yarn run build:packages",
     "validate:gjs": "tsc --noEmit ./@types/Gjs/*.ts",
     "validate:node-gtk": "tsc --noEmit ./@types/node-gtk/*.ts",
     "validate": "yarn run validate:gjs && yarn run validate:node-gtk",
@@ -107,7 +109,7 @@
     "@ribajs/babel-config": "workspace:*",
     "@ribajs/strapi": "workspace:*"
   },
-  "packageManager": "yarn@3.1.1",
+  "packageManager": "yarn@3.2.0",
   "dependencies": {
     "@gjsify/typedoc-custom-cli": "workspace:^",
     "@gjsify/typedoc-plugin-remote-search": "workspace:^",
