npm scripts: Fix ts-for-gir command

--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:gjs": "yarn run build:docs:gjs && yarn run serve:gjs",
     "start:node-gtk": "yarn run build:docs:node-gtk && yarn run serve:node-gtk",
-    "start:try": "yarn run build:docs:try && yarn run serve:try",
+    "start:try": "yarn run build:types:try && yarn run build:docs:try && yarn run serve:try",
     "update": "yarn run update:submodules",
     "update:submodules": "git submodule update --init --recursive && git submodule foreach git pull origin master",
-    "build:types:node-gtk": "yarn run clear:types:node-gtk && ts-for-gjs generate '*' -e node --useNamespace --moduleType commonjs --ignoreConflicts",
-    "build:types:gjs": "yarn run clear:types:gjs && ts-for-gjs generate '*' -e gjs --useNamespace --moduleType esm --ignoreConflicts",
+    "build:types:node-gtk": "yarn run clear:types:node-gtk && NODE_OPTIONS=\"\" ts-for-gir generate '*' -e node --useNamespace --moduleType commonjs --ignoreConflicts",
+    "build:types:gjs": "yarn run clear:types:gjs && NODE_OPTIONS=\"\" ts-for-gir generate '*' -e gjs --useNamespace --moduleType esm --ignoreConflicts",
+    "build:types:try": "NODE_OPTIONS=\"\" ts-for-gir generate 'Zeitgeist-2.0' -e gjs --useNamespace --moduleType esm --ignoreConflicts",
     "build:types": "yarn run build:types:gjs && yarn run build:types:node-gtk",
     "build:docs:node-gtk": "yarn run clear:docs:node-gtk && yarn run typedoc --options ./packages/typedoc-custom-cli/typedoc.node.js --in ./@types/node-gtk",
     "build:docs:gjs": "yarn run clear:docs:gjs && yarn run typedoc --options ./packages/typedoc-custom-cli/typedoc.gjs.js --in ./@types/Gjs",
@@ -20,8 +21,8 @@
     "build:docs": "yarn run build:docs:gjs && yarn run build:docs:node-gtk",
     "build:node-gtk": "yarn run build:types:node-gtk && yarn run build:docs:node-gtk",
     "build:gjs": "yarn run build:types:gjs && yarn run build:docs:gjs",
-    "build:packages:ts-for-gjs": "cd vendor/ts-for-gjs && NODE_OPTIONS=\"\" npm install && NODE_OPTIONS=\"\" npm run build && NODE_OPTIONS=\"\" npm link",
-    "build:packages": "yarn run build:packages:ts-for-gjs && yarn workspace @gjsify/typedoc-custom-cli run build && yarn workspace @gjsify/typedoc-plugin-remote-search run build && yarn workspace @gjsify/typedoc-theme run build && yarn workspace @gjsify/typedoc-theme-client run build",
+    "build:packages:ts-for-gir": "cd vendor/ts-for-gir && NODE_OPTIONS=\"\" npm install && NODE_OPTIONS=\"\" npm run build && NODE_OPTIONS=\"\" npm link",
+    "build:packages": "yarn run build:packages:ts-for-gir && yarn workspace @gjsify/typedoc-custom-cli run build && yarn workspace @gjsify/typedoc-plugin-remote-search run build && yarn workspace @gjsify/typedoc-theme run build && yarn workspace @gjsify/typedoc-theme-client run build",
     "build": "yarn run build:packages",
     "validate:gjs": "tsc --noEmit ./@types/Gjs/*.ts",
     "validate:node-gtk": "tsc --noEmit ./@types/node-gtk/*.ts",
@@ -29,7 +30,7 @@
     "clear:docs:node-gtk": "rm -rf ./docs/node-gtk",
     "clear:docs:gjs": "rm -rf ./docs/gjs",
     "clear:docs:try": "rm -rf ./docs/try",
-    "clear:docs": "rm -rf ./docs",
+    "clear:docs": "rm -rf ./docs/node-gtk ./docs/gjs ./docs/try",
     "clear:types:node-gtk": "rm -rf ./@types/node-gtk",
     "clear:types:gjs": "rm -rf ./@types/Gjs",
     "clear": "yarn run clear:docs",
