--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,5 +27,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: sudo apt-get update
-    - run: npm install
-    - run: npm run build
+    - run: yarn install
+    - run: yarn run build
+    - run: yarn run start:try
