Fix docs submodule url

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,4 +10,4 @@
 	url = https://github.com/gjsify/ts-for-gjs.git
 [submodule "docs"]
 	path = docs
-	url = git@github.com:gjsify/generated-docs.git
+	url = https://github.com/gjsify/generated-docs.git
