npm scripts: Fix ts-for-gjs path

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:gjs": "yarn run build:docs:gjs && yarn run serve:gjs",
-    "start:node-gtk": "yarn run build:docs:node-gtk && yarn run serve:node-gtk",
-    "start:try": "yarn run build:types:try && yarn run build:docs:try && yarn run serve:try",
+    "start": "yarn run start:gjs && yarn run start:node-gtk",
+    "start:gjs": "yarn run build:gjs && yarn run serve:gjs",
+    "start:node-gtk": "yarn run build:node-gtk && yarn run serve:node-gtk",
+    "start:try": "yarn run build:try && yarn run serve:try",
     "update": "yarn run update:submodules",
     "update:submodules": "git submodule update --init --recursive && git submodule foreach git pull origin master",
     "build:types:node-gtk": "yarn run clear:types:node-gtk && NODE_OPTIONS=\"\" ts-for-gir generate '*' -e node --useNamespace --moduleType commonjs --ignoreConflicts",
@@ -21,7 +22,8 @@
     "build:docs": "yarn run build:docs:gjs && yarn run build:docs:node-gtk",
     "build:node-gtk": "yarn run build:types:node-gtk && yarn run build:docs:node-gtk",
     "build:gjs": "yarn run build:types:gjs && yarn run build:docs:gjs",
-    "build:packages:ts-for-gir": "cd vendor/ts-for-gir && NODE_OPTIONS=\"\" npm install && NODE_OPTIONS=\"\" npm run build && NODE_OPTIONS=\"\" npm link",
+    "build:try": "yarn run build:types:try && yarn run build:docs:try",
+    "build:packages:ts-for-gir": "cd vendor/ts-for-gjs && NODE_OPTIONS=\"\" npm install && NODE_OPTIONS=\"\" npm run build && NODE_OPTIONS=\"\" npm link",
     "build:packages": "yarn run build:packages:ts-for-gir && yarn workspace @gjsify/typedoc-custom-cli run build && yarn workspace @gjsify/typedoc-plugin-remote-search run build && yarn workspace @gjsify/typedoc-theme run build && yarn workspace @gjsify/typedoc-theme-client run build",
     "build": "yarn run build:packages",
     "validate:gjs": "tsc --noEmit ./@types/Gjs/*.ts",
