typedoc-theme-client: Moved some components to Riba.js

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,4 +13,4 @@
 	url = https://github.com/gjsify/generated-docs.git
 [submodule "@types"]
 	path = @types
-	url = git@github.com:gjsify/types.git
+	url = https://github.com/gjsify/types.git
