--- a/packages/typedoc-theme-client/package.json
+++ b/packages/typedoc-theme-client/package.json
@@ -72,13 +72,13 @@
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "@babel/plugin-transform-typescript": "^7.16.8",
     "@ribajs/bs5": "workspace:*",
     "@ribajs/core": "workspace:*",
     "@ribajs/events": "workspace:*",
     "@ribajs/extras": "workspace:*",
     "@ribajs/iconset": "workspace:*",
     "@ribajs/router": "workspace:*",
+    "@ribajs/typedoc": "workspace:^",
     "@ribajs/types": "workspace:*",
     "@ribajs/utils": "workspace:^",
     "bootstrap": "^5.1.3"
