typedoc-plugin-remote-search: Replaced hostname and port plugin options with serverBaseUrl option and other cleanups

--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "clear:types:node-gtk": "rm -rf ./@types/node-gtk",
     "clear:types:gjs": "rm -rf ./@types/Gjs",
     "clear": "yarn run clear:docs",
-    "serve:node-gtk": "typedoc-server serve ./docs/node-gtk",
-    "serve:gjs": "typedoc-server serve ./docs/gjs",
-    "serve:try": "typedoc-server serve ./docs/try",
+    "serve:node-gtk": "typedoc-server serve ./docs/node-gtk --origin *",
+    "serve:gjs": "typedoc-server serve ./docs/gjs --origin *",
+    "serve:try": "typedoc-server serve ./docs/try --origin *",
     "typedoc-server": "yarn workspace @gjsify/typedoc-plugin-remote-search run start",
     "typedoc": "yarn workspace @gjsify/typedoc-custom-cli run start"
   },
@@ -58,7 +58,7 @@
   "author": "Pascal Garber <pascal@artandcode.studio>",
   "license": "AGPL",
   "devDependencies": {
-    "@ribajs/eslint-config": "next",
+    "@ribajs/eslint-config": "workspace:^",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/experimental-utils": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
@@ -80,37 +80,37 @@
     "!vendor/riba/infra/schematics"
   ],
   "resolutions": {
-    "@ribajs/accessibility": "workspace:*",
-    "@ribajs/artcodestudio": "workspace:*",
-    "@ribajs/bs4": "workspace:*",
-    "@ribajs/bs5": "workspace:*",
-    "@ribajs/content-slider": "workspace:*",
-    "@ribajs/octobercms": "workspace:*",
-    "@ribajs/leaflet-map": "workspace:*",
-    "@ribajs/cache": "workspace:*",
-    "@ribajs/core": "workspace:*",
-    "@ribajs/extras": "workspace:*",
-    "@ribajs/events": "workspace:*",
-    "@ribajs/history": "workspace:*",
-    "@ribajs/i18n": "workspace:*",
-    "@ribajs/iconset": "workspace:*",
-    "@ribajs/jquery": "workspace:*",
-    "@ribajs/moment": "workspace:*",
-    "@ribajs/photoswipe": "workspace:*",
-    "@ribajs/router": "workspace:*",
-    "@ribajs/shopify": "workspace:*",
-    "@ribajs/shopify-easdk": "workspace:*",
-    "@ribajs/shopify-tda": "workspace:*",
-    "@ribajs/utils": "workspace:*",
-    "@ribajs/doc": "workspace:*",
-    "@ribajs/eslint-config": "workspace:*",
-    "@ribajs/types": "workspace:*",
-    "@ribajs/webpack-config": "workspace:*",
-    "@ribajs/tsconfig": "workspace:*",
-    "@ribajs/nest-theme": "workspace:*",
-    "@ribajs/yarn-package": "workspace:*",
-    "@ribajs/babel-config": "workspace:*",
-    "@ribajs/strapi": "workspace:*"
+    "@ribajs/accessibility": "workspace:^",
+    "@ribajs/artcodestudio": "workspace:^",
+    "@ribajs/bs4": "workspace:^",
+    "@ribajs/bs5": "workspace:^",
+    "@ribajs/content-slider": "workspace:^",
+    "@ribajs/octobercms": "workspace:^",
+    "@ribajs/leaflet-map": "workspace:^",
+    "@ribajs/cache": "workspace:^",
+    "@ribajs/core": "workspace:^",
+    "@ribajs/extras": "workspace:^",
+    "@ribajs/events": "workspace:^",
+    "@ribajs/history": "workspace:^",
+    "@ribajs/i18n": "workspace:^",
+    "@ribajs/iconset": "workspace:^",
+    "@ribajs/jquery": "workspace:^",
+    "@ribajs/moment": "workspace:^",
+    "@ribajs/photoswipe": "workspace:^",
+    "@ribajs/router": "workspace:^",
+    "@ribajs/shopify": "workspace:^",
+    "@ribajs/shopify-easdk": "workspace:^",
+    "@ribajs/shopify-tda": "workspace:^",
+    "@ribajs/utils": "workspace:^",
+    "@ribajs/doc": "workspace:^",
+    "@ribajs/eslint-config": "workspace:^",
+    "@ribajs/types": "workspace:^",
+    "@ribajs/webpack-config": "workspace:^",
+    "@ribajs/tsconfig": "workspace:^",
+    "@ribajs/nest-theme": "workspace:^",
+    "@ribajs/yarn-package": "workspace:^",
+    "@ribajs/babel-config": "workspace:^",
+    "@ribajs/strapi": "workspace:^"
   },
   "packageManager": "yarn@3.2.0",
   "dependencies": {
