--- a/packages/typedoc-plugin-remote-search/package.json
+++ b/packages/typedoc-plugin-remote-search/package.json
@@ -27,6 +27,7 @@
     ],
     "devDependencies": {
         "@types/koa": "^2",
+        "@types/koa__cors": "^3",
         "@types/koa__router": "^8.0.11",
         "@types/lzma-native": "^4.0.1",
         "esbuild": "^0.14.23",
@@ -52,6 +53,7 @@
         "example": "npm run build:example && npm run serve:example"
     },
     "dependencies": {
+        "@koa/cors": "^3.1.0",
         "@koa/router": "^10.1.1",
         "@types/koa-compress": "^4.0.3",
         "@types/koa-static": "^4.0.2",
