--- a/packages/typedoc-theme-client/package.json
+++ b/packages/typedoc-theme-client/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --progress --color --env production",
     "build:dev": "webpack --progress --color --env development",
-    "build:try": "yarn run build:dev --config ./webpack.try.js --env development",
-    "build:typedoc": "yarn run build:dev --config ./webpack.typedoc.js --env development",
+    "build:try": "yarn run build:dev --config ./webpack.try.js --env production",
+    "build:typedoc": "yarn run build:dev --config ./webpack.typedoc.js --env production",
     "watch": "webpack --color --watch --env development",
     "watch:prod": "webpack --color --watch --env production",
     "watch:try": "yarn run watch --config ./webpack.try.js",
